Added some more information to the README

--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-Blast out your resume to Dice.com
+# Blast out your resume to Dice.com
+
+### Overview
+
+The goal of this project is to bulk apply for jobs on Dice.com
+
